--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,7 +79,7 @@ import Footer from "../components/Footer.astro";
     </div>
   </section>
   <section class="section-3" id="contact">
-    <div class="container">
+    <div class="container w-4/5">
       <div class="w-4/5 md:w-2/3 flex flex-col items-center justify-start">
         <h2 class="text-slate-100">Get In Touch!</h2>
         <p class="text-slate-100">
@@ -244,6 +244,7 @@ import Footer from "../components/Footer.astro";
       align-items: center;
       justify-content: center;
       width: 100%;
+      padding: 0 5rem;
     }
   }
 </style>
