--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -1,6 +1,5 @@
 ---
 import { sanityClient } from "sanity:client";
-import imageUrlBuilder from "@sanity/image-url";
 
 export type props = {
   title: string;
@@ -18,7 +17,7 @@ const categories = await sanityClient.fetch(`*[_type == "category"]{
 ---
 
 <section class="nav-section">
-  <nav class="relative mx-8 flex justify-between items-center bg-white">
+  <nav class="relative mx-8 h-24 flex justify-between items-center bg-white">
     <a class="text-2xl font-light leading-none" href="/">
       Main Street Percussion
     </a>
@@ -29,7 +28,6 @@ const categories = await sanityClient.fetch(`*[_type == "category"]{
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg"
         >
-          <title>Mobile menu</title>
           <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
         </svg>
       </button>
@@ -136,8 +134,8 @@ const categories = await sanityClient.fetch(`*[_type == "category"]{
 
 <style>
   .nav-item {
-    height: 6rem;
     position: relative;
+    height: 6rem;
   }
 
   .dropdown {
